{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 89,
  "lineage": "1e48842e-6623-ab74-67f9-834f82f79e88",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "existing_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:subnet/subnet-0eddb73a07d97574c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.11.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eddb73a07d97574c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304737152597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "private-subnet-1",
              "terraform-private-subnet": "true"
            },
            "vpc_id": "vpc-0660fdd342fa870de"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:subnet/subnet-018751fdd0049d93e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 247,
            "cidr_block": "10.0.12.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018751fdd0049d93e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304737152597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "private-subnet-2",
              "terraform-private-subnet": "true"
            },
            "vpc_id": "vpc-0660fdd342fa870de"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:subnet/subnet-04016aa2951215e5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "available_ip_address_count": 246,
            "cidr_block": "10.0.13.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04016aa2951215e5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304737152597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "private-subnet-3",
              "terraform-private-subnet": "true"
            },
            "vpc_id": "vpc-0660fdd342fa870de"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "existing_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:subnet/subnet-04c7e26d9dbcfeb52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c7e26d9dbcfeb52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "304737152597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-1",
              "terraform-public-subnet": "true"
            },
            "vpc_id": "vpc-0660fdd342fa870de"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:subnet/subnet-0a87b5f3f34b3cfd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a87b5f3f34b3cfd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "304737152597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-2",
              "terraform-public-subnet": "true"
            },
            "vpc_id": "vpc-0660fdd342fa870de"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:vpc/vpc-0660fdd342fa870de",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f7adffdf788d4a7a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0003934743e411c3c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0660fdd342fa870de",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e5ab1f25cf76c2d8",
            "owner_id": "304737152597",
            "tags": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec3c1b8fcfdd309a",
            "arn": "arn:aws:ec2:eu-west-1:304737152597:elastic-ip/eipalloc-0ec3c1b8fcfdd309a",
            "association_id": "eipassoc-035609d282b640cc9",
            "domain": "vpc",
            "id": "eipalloc-0ec3c1b8fcfdd309a",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0edb0f3d5c784a412",
            "private_dns": "ip-10-0-1-68.eu-west-1.compute.internal",
            "private_ip": "10.0.1.68",
            "public_dns": "ec2-34-247-153-219.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.247.153.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-gateway-eip"
            },
            "tags_all": {
              "Name": "nat-gateway-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:internet-gateway/igw-0c16ba494e75cc2c2",
            "id": "igw-0c16ba494e75cc2c2",
            "owner_id": "304737152597",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0660fdd342fa870de"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec3c1b8fcfdd309a",
            "association_id": "eipassoc-035609d282b640cc9",
            "connectivity_type": "public",
            "id": "nat-08caf24e296ac7676",
            "network_interface_id": "eni-0edb0f3d5c784a412",
            "private_ip": "10.0.1.68",
            "public_ip": "34.247.153.219",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04c7e26d9dbcfeb52",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:route-table/rtb-0de5d6dedd4ca80ce",
            "id": "rtb-0de5d6dedd4ca80ce",
            "owner_id": "304737152597",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08caf24e296ac7676",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0660fdd342fa870de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:route-table/rtb-0aa6135bc208d5338",
            "id": "rtb-0aa6135bc208d5338",
            "owner_id": "304737152597",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c16ba494e75cc2c2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0660fdd342fa870de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7479812bb5e612f",
            "route_table_id": "rtb-0de5d6dedd4ca80ce",
            "subnet_id": "subnet-0eddb73a07d97574c"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ede6d4c653d6be2",
            "route_table_id": "rtb-0de5d6dedd4ca80ce",
            "subnet_id": "subnet-018751fdd0049d93e"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f517db2ff1b187b",
            "route_table_id": "rtb-0de5d6dedd4ca80ce",
            "subnet_id": "subnet-04016aa2951215e5d"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0535fd3982018ef79",
            "route_table_id": "rtb-0aa6135bc208d5338",
            "subnet_id": "subnet-04c7e26d9dbcfeb52"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b22277880561586c",
            "route_table_id": "rtb-0aa6135bc208d5338",
            "subnet_id": "subnet-0a87b5f3f34b3cfd1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:subnet/subnet-0eddb73a07d97574c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eddb73a07d97574c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304737152597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1",
              "terraform-private-subnet": "true"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "terraform-private-subnet": "true"
            },
            "vpc_id": "vpc-0660fdd342fa870de"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:subnet/subnet-018751fdd0049d93e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018751fdd0049d93e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304737152597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2",
              "terraform-private-subnet": "true"
            },
            "tags_all": {
              "Name": "private-subnet-2",
              "terraform-private-subnet": "true"
            },
            "vpc_id": "vpc-0660fdd342fa870de"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:subnet/subnet-04016aa2951215e5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04016aa2951215e5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304737152597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-3",
              "terraform-private-subnet": "true"
            },
            "tags_all": {
              "Name": "private-subnet-3",
              "terraform-private-subnet": "true"
            },
            "vpc_id": "vpc-0660fdd342fa870de"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:subnet/subnet-04c7e26d9dbcfeb52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c7e26d9dbcfeb52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "304737152597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1",
              "terraform-public-subnet": "true"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "terraform-public-subnet": "true"
            },
            "vpc_id": "vpc-0660fdd342fa870de"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:subnet/subnet-0a87b5f3f34b3cfd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a87b5f3f34b3cfd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "304737152597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2",
              "terraform-public-subnet": "true"
            },
            "tags_all": {
              "Name": "public-subnet-2",
              "terraform-public-subnet": "true"
            },
            "vpc_id": "vpc-0660fdd342fa870de"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:vpc/vpc-0660fdd342fa870de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-077e4fc346b7e1e5c",
            "default_route_table_id": "rtb-0e5ab1f25cf76c2d8",
            "default_security_group_id": "sg-0c4f39092cf23a688",
            "dhcp_options_id": "dopt-0003934743e411c3c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0660fdd342fa870de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5ab1f25cf76c2d8",
            "owner_id": "304737152597",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_groups[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:security-group/sg-04061cbf5156d6459",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04061cbf5156d6459",
            "ingress": [],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "304737152597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-sg"
            },
            "tags_all": {
              "Name": "eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0660fdd342fa870de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.existing_vpc",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:security-group/sg-01187a4ca0dde96c1",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01187a4ca0dde96c1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04061cbf5156d6459"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-worker-node-sg",
            "name_prefix": "",
            "owner_id": "304737152597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-worker-node-sg"
            },
            "tags_all": {
              "Name": "eks-worker-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0660fdd342fa870de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.existing_vpc",
            "module.networking.aws_vpc.main",
            "module.security_groups.aws_security_group.eks_cluster_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:security-group/sg-04c92a18ead485a43",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c92a18ead485a43",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01187a4ca0dde96c1"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "elasticache-redis-sg",
            "name_prefix": "",
            "owner_id": "304737152597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elasticache-redis-sg"
            },
            "tags_all": {
              "Name": "elasticache-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0660fdd342fa870de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.existing_vpc",
            "module.networking.aws_vpc.main",
            "module.security_groups.aws_security_group.eks_cluster_sg",
            "module.security_groups.aws_security_group.eks_worker_node_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:security-group/sg-0bdc1cb14e427ad85",
            "description": "Security group for MSK cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdc1cb14e427ad85",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01187a4ca0dde96c1"
                ],
                "self": false,
                "to_port": 9098
              }
            ],
            "name": "msk-cluster-sg",
            "name_prefix": "",
            "owner_id": "304737152597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "msk-cluster-sg"
            },
            "tags_all": {
              "Name": "msk-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0660fdd342fa870de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.existing_vpc",
            "module.networking.aws_vpc.main",
            "module.security_groups.aws_security_group.eks_cluster_sg",
            "module.security_groups.aws_security_group.eks_worker_node_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:304737152597:security-group/sg-0136ddf5e6e2a69af",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0136ddf5e6e2a69af",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01187a4ca0dde96c1"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-postgres-sg",
            "name_prefix": "",
            "owner_id": "304737152597",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-postgres-sg"
            },
            "tags_all": {
              "Name": "rds-postgres-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0660fdd342fa870de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.existing_vpc",
            "module.networking.aws_vpc.main",
            "module.security_groups.aws_security_group.eks_cluster_sg",
            "module.security_groups.aws_security_group.eks_worker_node_sg"
          ]
        }
      ]
    }
  ]
}